# splicers

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  AUDIT.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  TESTING.md  environments.toml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml  keep-alive.yml  node.yml
contracts/gene-splicer/: Cargo.toml
contracts/gene-splicer/src/: lib.rs  test.rs
docs/: agents.md
docs/reference-implementations/: QuicknetRegistry.sol  README.md
docs/schemas/: cartridge_skins.schema.json  gene_library.schema.json
docs/specs/: gene-splicing-v1.1.md  gene-splicing-v1.md
e2e/: cartridge-lifecycle.spec.ts
public/: 404.html
public/metadata/: README.md  gene-traits.json
scripts/: decompressDrandPubkey.ts  fetchAndDecompressDrand.ts  generatePlaceholderAssets.html  getDrandPubkey.ts  keepAlive.sh  redeploy-testnet.sh  submitEntropyForRound.sh  testBLS12381.sh  testBLS12381.ts  testRandomnessVerification.ts  testWrongRound.sh
server/: .env.example  index.ts  keepAlive.ts  log.ts  package.json  pinning.test.ts  pinning.ts  tsconfig.json
src/: App.test.tsx  App.tsx  index.css  main.tsx
src/components/: BattleArena.tsx  ConnectAccount.tsx  CreatureRenderer.test.tsx  CreatureRenderer.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GenomeSplicer.test.tsx.skip  GenomeSplicer.tsx  NetworkPill.tsx  WalkingCreatures.tsx
src/contracts/: gene_splicer.ts  util.ts
src/hooks/: useSubscription.ts  useWallet.test.tsx.skip  (+2 more)
(+18 files in other folders)
